--- a/example/Overview/Overview.csproj
+++ b/example/Overview/Overview.csproj
@@ -29,6 +29,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Controls\Preview.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Update="Controls\Result.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
