--- a/src/AntdUI/AntdUI.csproj
+++ b/src/AntdUI/AntdUI.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net8.0-windows;net7.0-windows;net6.0-windows;net48;net46;net40</TargetFrameworks>
+		<TargetFrameworks>net8.0-windows;net6.0-windows;net48;net46;net40</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<UseWindowsForms>true</UseWindowsForms>
 		<Authors>Tom</Authors>
