--- a/.gitee/ISSUE_TEMPLATE/question.yml
+++ b/.gitee/ISSUE_TEMPLATE/question.yml
@@ -11,7 +11,7 @@ body:
     attributes:
       label: 版本号
       description: 请输入您使用的版本号。
-      placeholder: 例如：1.0.5
+      placeholder: 例如：1.0.5，请不要填写“最新”等干扰描述，源码可填写提交id
     validations:
       required: true
   - type: dropdown
@@ -26,6 +26,7 @@ body:
         - .NET6
         - .NET7
         - .NET8
+        - .NET9
     validations:
       required: true
   - type: dropdown
